syntax = "proto3";

package product_management;

service ProductService {
    // Unary RPC for getting product details
    rpc GetProductDetails(GetProductDetailsRequest) returns (ProductDetailsResponse);

    // Server streaming RPC for listing all products
    rpc ListAllProducts(ListAllProductsRequest) returns (stream Product);

    // Client streaming RPC for adding a product
    rpc AddProduct(stream AddProductRequest) returns (AddProductResponse);

    // Bidirectional streaming RPC for updating product inventory
    rpc UpdateProductInventory(stream UpdateProductInventoryRequest) returns (stream UpdateProductInventoryResponse);
}

message Product {
    string id = 1;
    string name = 2;
    float price = 3;
    int32 quantity = 4;
}

message GetProductDetailsRequest {
    string product_id = 1;
}

message ProductDetailsResponse {
    Product product = 1;
}

message ListAllProductsRequest {
    // No request parameters needed for listing all products
}

message AddProductRequest {
    Product product = 1;
}

message AddProductResponse {
    bool success = 1;
}

message UpdateProductInventoryRequest {
    string product_id = 1;
    int32 quantity_change = 2;
}

message UpdateProductInventoryResponse {
    bool success = 1;
}